# godot-binary-serialization

./: Cargo.toml  README.md
src/: lib.rs
src/decoder/: bool.rs  dictionary.rs  float.rs  int.rs  mod.rs  string.rs  vector.rs
src/encoder/: bool.rs  dictionary.rs  float.rs  int.rs  mod.rs  string.rs  vector.rs
src/types/: mod.rs  primitive.rs  structures.rs  variant.rs
